--- a/app/src/main/res/layout/category_items_list_row.xml
+++ b/app/src/main/res/layout/category_items_list_row.xml
@@ -9,6 +9,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:layout_margin="5dp"
         app:cardBackgroundColor="@color/backgroundLight"
         app:cardCornerRadius="4dp"
         app:cardElevation="8dp"
