--- a/app/src/main/res/layout/activity_category_items_list.xml
+++ b/app/src/main/res/layout/activity_category_items_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/backgroundDark"
     tools:context=".inventoryManagement.inventory_items_list">
 
     <ListView
