--- a/app/src/main/res/layout/category_items_list_row.xml
+++ b/app/src/main/res/layout/category_items_list_row.xml
@@ -8,7 +8,7 @@
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="70dp"
         android:layout_margin="5dp"
         app:cardBackgroundColor="@color/backgroundLight"
         app:cardCornerRadius="4dp"
@@ -44,34 +44,35 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="12dp"
-                android:text="Item Name"
+                android:layout_marginTop="20dp"
+                android:text="@string/inventory_item_name"
                 android:textSize="22sp"
                 app:layout_constraintStart_toEndOf="@+id/item_row_image"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/item_row_qty"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="77dp"
+                android:layout_height="28dp"
                 android:layout_marginEnd="28dp"
                 android:layout_marginRight="28dp"
-                android:layout_marginTop="4dp"
-                android:text="Item Qty"
+                android:layout_marginTop="8dp"
+                android:text="@string/inventory_item_qty"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/item_row_unit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:layout_marginRight="24dp"
-                android:text="Item Unit"
+                android:layout_width="77dp"
+                android:layout_height="28dp"
+                android:layout_marginEnd="28dp"
+                android:layout_marginRight="28dp"
+                android:layout_marginTop="36dp"
+                android:text="Item Qty"
                 android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/item_row_qty" />
+                app:layout_constraintTop_toTopOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
