--- a/app/src/main/res/layout/activity_inventory_add_item.xml
+++ b/app/src/main/res/layout/activity_inventory_add_item.xml
@@ -58,7 +58,7 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/inventory_add_item_qty"
+        android:id="@+id/request_item_qty"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
-        app:layout_constraintStart_toEndOf="@+id/inventory_add_item_qty"
+        app:layout_constraintStart_toEndOf="@+id/request_item_qty"
         app:layout_constraintTop_toBottomOf="@+id/inventory_add_item_name" />
 
     <TextView
@@ -96,7 +96,7 @@
         android:text="Categories"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inventory_add_item_qty" />
+        app:layout_constraintTop_toBottomOf="@+id/request_item_qty" />
 
     <Button
         android:id="@+id/add_item_confirm_btn"
