--- a/app/src/main/res/layout/activity_acti_expenses.xml
+++ b/app/src/main/res/layout/activity_acti_expenses.xml
@@ -21,7 +21,7 @@
             android:elevation="8dp"
             app:layout_scrollFlags="scroll|enterAlways|snap"
             app:title="@string/expenses"
-            app:titleTextColor="@color/primaryTextColor"></android.support.v7.widget.Toolbar>
+            app:titleTextColor="@color/primaryTextColor"/>
     </android.support.design.widget.AppBarLayout>
 
 
@@ -47,8 +47,8 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="280dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageButton
         android:id="@+id/directButt"
@@ -149,5 +149,18 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addExpenses"
+        android:layout_width="65dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="84dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginRight="36dp"
+        android:clickable="true"
+        app:backgroundTint="@color/greenPlus"
+        app:fabSize="normal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/plus" />
 
 </android.support.constraint.ConstraintLayout>
