--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,5 @@
 
   <color name="cardBackground">#212121</color>
   <color name="btm_navbar_item_notchecked">#f8bbd0</color>
+    <color name="greenPlus">#43b05c</color>
 </resources>
