--- a/app/src/main/res/layout/inventory_category_card.xml
+++ b/app/src/main/res/layout/inventory_category_card.xml
@@ -13,9 +13,10 @@
         android:padding="5dp"
         app:cardBackgroundColor="@color/backgroundLight"
         app:cardCornerRadius="4dp"
-        app:cardElevation="4dp"
+        app:cardElevation="8dp"
         app:layout_columnWeight="1"
-        app:layout_rowWeight="1">
+        app:layout_rowWeight="1"
+        >
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
