#1 Adding DB capability to fetch forum posts and display. -GSR

--- a/app/src/main/res/layout/fragment_forums.xml
+++ b/app/src/main/res/layout/fragment_forums.xml
@@ -4,9 +4,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/backgroundDark"
+    >
 
-    <!--top appbar-->
+
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -34,8 +36,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/backgroundDark"
+            android:layout_height="match_parent"
             android:scrollbars="vertical"
             />
 
