--- a/app/src/main/res/layout/layout_forum_card.xml
+++ b/app/src/main/res/layout/layout_forum_card.xml
@@ -40,7 +40,9 @@
                 android:textSize="12sp"
                 android:textColor="#616161"
                 android:textAlignment="center"
-                android:layout_below="@id/postTitle"/>
+                android:layout_below="@id/postTitle"
+                android:layout_marginLeft="2dp"
+                />
 
             <!--Body-->
             <TextView
@@ -68,7 +70,7 @@
 
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="8dp"
-                    android:layout_marginLeft="8dp"
+                    android:layout_marginLeft="0dp"
                     android:layout_marginStart="8dp"
 
                     android:layout_marginTop="8dp"
