--- a/app/src/main/res/layout/activity_inventory_add_item.xml
+++ b/app/src/main/res/layout/activity_inventory_add_item.xml
@@ -41,7 +41,7 @@
         app:menu="@menu/navigation" />
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/inventory_add_item_name"
+        android:id="@+id/inventory_add_item_name_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
@@ -52,13 +52,14 @@
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/add_item_name_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Name" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/request_item_qty"
+        android:id="@+id/inventory_add_item_qty_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
@@ -66,9 +67,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/inventory_add_item_name">
+        app:layout_constraintTop_toBottomOf="@+id/inventory_add_item_name_layout">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/add_item_qty_editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Quantity"
@@ -83,8 +85,8 @@
         android:layout_marginLeft="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
-        app:layout_constraintStart_toEndOf="@+id/request_item_qty"
-        app:layout_constraintTop_toBottomOf="@+id/inventory_add_item_name" />
+        app:layout_constraintStart_toEndOf="@+id/inventory_add_item_qty_layout"
+        app:layout_constraintTop_toBottomOf="@+id/inventory_add_item_name_layout" />
 
     <TextView
         android:id="@+id/categoryTitle"
@@ -96,7 +98,7 @@
         android:text="Categories"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/request_item_qty" />
+        app:layout_constraintTop_toBottomOf="@+id/inventory_add_item_qty_layout" />
 
     <Button
         android:id="@+id/add_item_confirm_btn"
