--- a/app/src/main/res/layout/activity_inventory_request_item.xml
+++ b/app/src/main/res/layout/activity_inventory_request_item.xml
@@ -42,7 +42,7 @@
         />
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/request_item_qty"
+        android:id="@+id/inventory_add_item_qty_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="140dp"
         android:layout_height="wrap_content"
@@ -97,7 +97,7 @@
         android:layout_marginTop="40dp"
         android:text="UNIT"
         android:textSize="24sp"
-        app:layout_constraintStart_toEndOf="@+id/request_item_qty"
+        app:layout_constraintStart_toEndOf="@+id/inventory_add_item_qty_layout"
         app:layout_constraintTop_toBottomOf="@+id/request_item_name" />
 
     <android.support.design.widget.TextInputLayout
@@ -110,7 +110,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="4dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/request_item_qty">
+        app:layout_constraintTop_toBottomOf="@+id/inventory_add_item_qty_layout">
 
         <android.support.design.widget.TextInputEditText
             android:layout_width="match_parent"
