Inventory Lists now work. Clicking on an inventory item now leads to request item with the relevant item's name displayed.

--- a/app/src/main/res/layout/activity_inventory_items_list.xml
+++ b/app/src/main/res/layout/activity_inventory_items_list.xml
@@ -45,8 +45,8 @@
         android:id="@+id/items_listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginBottom="?attr/actionBarSize"
+        android:layout_marginTop="?attr/actionBarSize"
         app:layout_constraintBottom_toTopOf="@id/navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
