--- a/app/src/main/res/layout/activity_expense__add.xml
+++ b/app/src/main/res/layout/activity_expense__add.xml
@@ -40,7 +40,7 @@
         app:menu="@menu/navigation" />
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/expense_description"
+        android:id="@+id/expense_description_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
@@ -51,6 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/expense_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/descriptionExpense" />
@@ -58,7 +59,7 @@
 
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/expense_amount"
+        android:id="@+id/expense_amount_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
@@ -69,13 +70,14 @@
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/expense_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/Rs_Expense" />
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        android:id="@+id/expense_category"
+        android:id="@+id/expense_category_layout"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
@@ -86,6 +88,7 @@
         app:layout_constraintTop_toBottomOf="@+id/appBarLayout">
 
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/expense_category"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/category_expense" />
@@ -95,12 +98,12 @@
         android:id="@+id/expense_submit_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="148dp"
-        android:layout_marginStart="148dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginLeft="120dp"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="4dp"
         android:text="@string/submit"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/expense_category" />
+        app:layout_constraintTop_toBottomOf="@+id/expense_category_layout" />
 
 
 </android.support.constraint.ConstraintLayout>
