#1 adding filtering functionality to toolbar. #2 deleting Building_icons folder inside Drawable since it's not allowed. -GSR

--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -21,15 +21,15 @@
         />
 
     <item
-        android:id="@+id/settings"
-        android:title="Settings"
+        android:id="@+id/allPosts"
+        android:title="All Posts"
         android:orderInCategory="100"
         app:showAsAction="never"
         />
 
     <item
-        android:id="@+id/logout"
-        android:title="Log Out"
+        android:id="@+id/myPosts"
+        android:title="My Posts"
         android:orderInCategory="100"
         app:showAsAction="never"
         />
