--- a/app/src/main/res/layout/activity_acti_expenses.xml
+++ b/app/src/main/res/layout/activity_acti_expenses.xml
@@ -47,6 +47,7 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="280dp"
+        android:layout_marginTop="?attr/actionBarSize"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
