Testing Git commit

--- a/app/src/main/res/layout/activity_inventory_category_grid.xml
+++ b/app/src/main/res/layout/activity_inventory_category_grid.xml
@@ -79,5 +79,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/plus" />
 
+    <Button
+        android:id="@+id/catPlaceHolderBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="84dp"
+        android:layout_marginLeft="44dp"
+        android:layout_marginStart="44dp"
+        android:background="@color/primaryLightColor"
+        android:text="Panel"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
 
