--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
   <color name="secondaryDarkColor">#12005e</color>
   <color name="primaryTextColor">#ffffff</color>
   <color name="secondaryTextColor">#ffffff</color>
-  <color name="backgroundLight">#F5F5F6</color>
+  <color name="backgroundLight">#f5f5f6</color>
   <color name="backgroundDark">#e1e2e1</color>
   <color name="um_shadow_color">#000</color>
 
@@ -22,4 +22,6 @@
   <color name="cardText">#000000</color>
 
     <color name="greenPlus">#43b05c</color>
+    <color name="chandula_yellow">#f1d03b</color>
+  <color name="tweakedRed">#fc4c3a</color>
 </resources>
